--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -26,5 +26,20 @@
             </div>
         </nav>
     </header>
+    <div class="main">
+        <section class="hero">
+            <div class="content">
+                <h1>Don’t miss amazing grocery deals</h1>
+                <p>Sign up for the daily newsletter</p>
+                <div class="subscribe">
+                    <input type="text" placeholder="Your emaill address">
+                    <button class="btn subscribe-btn">Subscribe</button>
+                </div>
+            </div>
+            <div class="hero-bg">
+                <img src="../assets/images/hero-img.png" alt="">
+            </div>
+        </section>
+    </div>
 </body>
 </html>
