--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 
 *{
     padding: 0;
@@ -6,18 +6,36 @@
 }
 
 body{
-    font-family: "Inter", sans-serif;
+    font-family: "Quicksand", sans-serif;
     background-color: #FFFFFF;
-    max-width: 1920px;
+    max-width: 1656px;
+    margin: auto;
+}
+/* ------Common----- */
+section{
+    margin: 20px 0;
+}
+
+.btn{
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+}
+input::placeholder {
+    color: #B6B6B6;
+}
+
+input:focus{
+    border: none;
 }
 
 /* --------Navbar------------ */
 
-header{
+/* header{
     max-width: 1656px;
     margin: auto;
     background-color: aliceblue;
-}
+} */
 
 nav {
     display: flex;
@@ -55,3 +73,53 @@ header nav .right span{
     font-size: 18px;
     color: #A4A1A1;
 }
+
+/* --------Hero Section-------- */
+.main .hero{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fff2d9;
+    
+    height: 597px;
+    border-radius: 10px;
+}
+.hero .content{
+    padding-left: 121px;
+}
+
+.hero .content h1{
+    font-size: 72px;
+    color: #253D4E;
+
+}
+
+.hero .subscribe{
+    margin-top: 60px;
+}
+.hero .subscribe input{
+    background-color: white;
+    border-radius: 30px;
+    width: 283px;
+    padding: 15px 15px;
+    border: none;
+}
+
+.hero .subscribe .subscribe-btn{
+    background-color: #3BB77E;
+    padding: 15px;
+    color: white;
+    position: relative;
+    right: 95px;
+}
+
+.hero .content p{
+    font-size: 30px;
+    color: #A4A1A1;
+    padding-top: 30px;
+}
+
+.main .hero .hero-bg img{
+    max-height: 597px;
+}
+
