--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,16 +75,30 @@ header nav .right span{
 }
 
 /* --------Hero Section-------- */
-.main .hero{
+.main .hero {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #fff2d9;
-    
     height: 597px;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+.main .hero::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: url(../images/hero-bg.png) center/cover no-repeat;
+    opacity: 0.1;
+    z-index: 1;
     border-radius: 10px;
 }
-.hero .content{
+
+.hero .content {
+    position: relative;
+    z-index: 2;
     padding-left: 121px;
 }
 
