--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grocery E-Commerce - Home Page</title>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -14,11 +16,11 @@
             </div>
             <div class="center">
                 <ul>
-                <li>Home</li>
-                <li>Shop</li>
-                <li>About</li>
-                <li>Contact Us</li>
-            </ul>
+                    <li>Home</li>
+                    <li>Shop</li>
+                    <li>About</li>
+                    <li>Contact Us</li>
+                </ul>
             </div>
             <div class="right">
                 <h2>1900 - 8888</h2>
@@ -40,6 +42,26 @@
                 <img src="../assets/images/hero-img.png" alt="">
             </div>
         </section>
+        <!-- Featured Categories -->
+        <section class="featured">
+            <div class="top">
+                <h1 class="section-title">Featured Categories</h1>
+                <ul>
+                    <li>All</li>
+                    <li>Milks & Dairies</li>
+                    <li>Coffes & Teas</li>
+                    <li>Pet Foods</li>
+                    <li>Meats</li>
+                    <li>Vegetables</li>
+                    <li>Fruits</li>
+                </ul>
+                <div class="arrow-btn">
+                    <button class="btn left-arrow"><</button>
+                    <button class="btn right-arrow">></button>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
+
 </html>
