--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -60,6 +60,58 @@
                     <button class="btn right-arrow">></button>
                 </div>
             </div>
+            <div class="box">
+                <div class="card">
+                    <img src="../assets/images/featured-img/1.png" alt="featured-1">
+                    <div class="card-title">Cake & Milk</div>
+                    <span>14 Items</span>
+                </div>
+                <div class="card">
+                    <img src="../assets/images/featured-img/2.png" alt="featured-2">
+                    <div class="card-title">Peach</div>
+                    <span>16 Items</span>
+                </div>
+                <div class="card">
+                    <img src="../assets/images/featured-img/3.png" alt="featured-3">
+                    <div class="card-title">Red Apple</div>
+                    <span>20 Items</span>
+                </div>
+                <div class="card">
+                    <img src="../assets/images/featured-img/4.png" alt="featured-4">
+                    <div class="card-title">Snack</div>
+                    <span>13 Items</span>
+                </div>
+                <div class="card">
+                    <img src="../assets/images/featured-img/6.png" alt="featured-6">
+                    <div class="card-title">Black Plum</div>
+                    <span>15 Items</span>
+                </div>
+                <div class="card">
+                    <img src="../assets/images/featured-img/1.png" alt="featured-1">
+                    <div class="card-title">Cake & Milk</div>
+                    <span>14 Items</span>
+                </div>
+                <div class="card">
+                    <img src="../assets/images/featured-img/2.png" alt="featured-2">
+                    <div class="card-title">Peach</div>
+                    <span>16 Items</span>
+                </div>
+                <div class="card">
+                    <img src="../assets/images/featured-img/3.png" alt="featured-3">
+                    <div class="card-title">Red Apple</div>
+                    <span>20 Items</span>
+                </div>
+                <div class="card">
+                    <img src="../assets/images/featured-img/4.png" alt="featured-4">
+                    <div class="card-title">Snack</div>
+                    <span>13 Items</span>
+                </div>
+                <div class="card">
+                    <img src="../assets/images/featured-img/6.png" alt="featured-6">
+                    <div class="card-title">Black Plum</div>
+                    <span>15 Items</span>
+                </div>
+            </div>
         </section>
     </div>
 </body>
