--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -112,6 +112,30 @@
                     <span>15 Items</span>
                 </div>
             </div>
+
+            <div class="featured-ads">
+                <div class="card">
+                    <div class="left">
+                        <h1>Everyday Fresh & Clean with Our Products</h1>
+                        <button class="btn">Shop Now ></button>
+                    </div>
+                    <img src="../assets/images/hero-img.png" alt="">
+                </div>
+                <div class="card">
+                    <div class="left">
+                        <h1>Everyday Fresh & Clean with Our Products</h1>
+                        <button class="btn">Shop Now ></button>
+                    </div>
+                    <img src="../assets/images/hero-img.png" alt="">
+                </div>
+                <div class="card">
+                    <div class="left">
+                        <h1>Everyday Fresh & Clean with Our Products</h1>
+                        <button class="btn">Shop Now ></button>
+                    </div>
+                    <img src="../assets/images/hero-img.png" alt="">
+                </div>
+            </div>
         </section>
     </div>
 </body>
