--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -56,8 +56,9 @@
                     <li>Fruits</li>
                 </ul>
                 <div class="arrow-btn">
-                    <button class="btn left-arrow"><</button>
-                    <button class="btn right-arrow">></button>
+                    <button class="btn left-arrow">
+                        < </button>
+                            <button class="btn right-arrow">></button>
                 </div>
             </div>
             <div class="box">
@@ -123,17 +124,176 @@
                 </div>
                 <div class="card">
                     <div class="left">
-                        <h1>Everyday Fresh & Clean with Our Products</h1>
+                        <h1>Make your Breakfast Healthy and Easy</h1>
                         <button class="btn">Shop Now ></button>
                     </div>
                     <img src="../assets/images/hero-img.png" alt="">
                 </div>
                 <div class="card">
                     <div class="left">
-                        <h1>Everyday Fresh & Clean with Our Products</h1>
+                        <h1>The best Organic Products Online</h1>
                         <button class="btn">Shop Now ></button>
                     </div>
                     <img src="../assets/images/hero-img.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- Product section -->
+        <section class="popular-product">
+            <div class="top">
+                <h1 class="section-title">Popular Product</h1>
+                <ul>
+                    <li>All</li>
+                    <li>Milks & Dairies</li>
+                    <li>Coffes & Teas</li>
+                    <li>Pet Foods</li>
+                    <li>Meats</li>
+                    <li>Vegetables</li>
+                    <li>Fruits</li>
+                </ul>
+            </div>
+
+            <div class="container">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="../assets/images/products/1.jpg" alt="">
+                    </div>
+                    <div class="card-content">
+                        <span>Hodo Foods</span>
+                        <h1>Seeds of Change Organic Quinoa, Brown, & Red Rice</h1>
+                        <span>500 gram</span>
+                        <div class="card-footer">
+                            <h1 class="price">$2.51</h1>
+                            <button class="btn">Add +</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="../assets/images/products/2.png" alt="">
+                    </div>
+                    <div class="card-content">
+                        <span>Hodo Foods</span>
+                        <h1>All Natural Italian-Style Chicken Meatballs</h1>
+                        <span>500 gram</span>
+                        <div class="card-footer">
+                            <h1 class="price">$2.51</h1>
+                            <button class="btn">Add +</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="../assets/images/products/3.png" alt="">
+                    </div>
+                    <div class="card-content">
+                        <span>Hodo Foods</span>
+                        <h1>Angie’s Boomchickapop Sweet & Salty Kettle Corn</h1>
+                        <span>500 gram</span>
+                        <div class="card-footer">
+                            <h1 class="price">$2.51</h1>
+                            <button class="btn">Add +</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="../assets/images/products/4.png" alt="">
+                    </div>
+                    <div class="card-content">
+                        <span>Hodo Foods</span>
+                        <h1>Foster Farms Takeout Crispy Classic Buffalo Wings</h1>
+                        <span>500 gram</span>
+                        <div class="card-footer">
+                            <h1 class="price">$2.51</h1>
+                            <button class="btn">Add +</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="../assets/images/products/5.png" alt="">
+                    </div>
+                    <div class="card-content">
+                        <span>Hodo Foods</span>
+                        <h1>Blue Diamond Almonds Lightly Salted Vegetables</h1>
+                        <span>500 gram</span>
+                        <div class="card-footer">
+                            <h1 class="price">$2.51</h1>
+                            <button class="btn">Add +</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="../assets/images/products/1.jpg" alt="">
+                    </div>
+                    <div class="card-content">
+                        <span>Hodo Foods</span>
+                        <h1>Seeds of Change Organic Quinoa, Brown, & Red Rice</h1>
+                        <span>500 gram</span>
+                        <div class="card-footer">
+                            <h1 class="price">$2.51</h1>
+                            <button class="btn">Add +</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="../assets/images/products/2.png" alt="">
+                    </div>
+                    <div class="card-content">
+                        <span>Hodo Foods</span>
+                        <h1>All Natural Italian-Style Chicken Meatballs</h1>
+                        <span>500 gram</span>
+                        <div class="card-footer">
+                            <h1 class="price">$2.51</h1>
+                            <button class="btn">Add +</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="../assets/images/products/3.png" alt="">
+                    </div>
+                    <div class="card-content">
+                        <span>Hodo Foods</span>
+                        <h1>Angie’s Boomchickapop Sweet & Salty Kettle Corn</h1>
+                        <span>500 gram</span>
+                        <div class="card-footer">
+                            <h1 class="price">$2.51</h1>
+                            <button class="btn">Add +</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="../assets/images/products/4.png" alt="">
+                    </div>
+                    <div class="card-content">
+                        <span>Hodo Foods</span>
+                        <h1>Foster Farms Takeout Crispy Classic Buffalo Wings</h1>
+                        <span>500 gram</span>
+                        <div class="card-footer">
+                            <h1 class="price">$2.51</h1>
+                            <button class="btn">Add +</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="../assets/images/products/5.png" alt="">
+                    </div>
+                    <div class="card-content">
+                        <span>Hodo Foods</span>
+                        <h1>Blue Diamond Almonds Lightly Salted Vegetables</h1>
+                        <span>500 gram</span>
+                        <div class="card-footer">
+                            <h1 class="price">$2.51</h1>
+                            <button class="btn">Add +</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
