--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -297,6 +297,88 @@
                 </div>
             </div>
         </section>
+
+        <!-- Best Seller Section -->
+        <section class="best-seller">
+            <h1 class="section-title">Best Sellers</h1>
+            <div class="container">
+                <div class="ads-img">
+                    <img src="../assets/images/ads-1.jpg" alt="">
+                </div>
+                <div class="items">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="../assets/images/products/1.jpg" alt="">
+                        </div>
+                        <div class="card-content">
+                            <span>Hodo Foods</span>
+                            <h1>Blue Diamond Almonds Lightly Salted Vegetables</h1>
+                            <span>500 gram</span>
+                            <div class="card-footer">
+                                <h1 class="price">$2.51</h1>
+                                <span>Sold: 90/120</span>
+                            </div>
+                            <div class="card-button">
+                                <button class="btn">Add to Cart</button>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="../assets/images/products/5.png" alt="">
+                        </div>
+                        <div class="card-content">
+                            <span>Hodo Foods</span>
+                            <h1>Blue Diamond Almonds Lightly Salted Vegetables</h1>
+                            <span>500 gram</span>
+                            <div class="card-footer">
+                                <h1 class="price">$2.51</h1>
+                                <span>Sold: 90/120</span>
+                            </div>
+                            <div class="card-button">
+                                <button class="btn">Add to Cart</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="../assets/images/products/2.png" alt="">
+                        </div>
+                        <div class="card-content">
+                            <span>Hodo Foods</span>
+                            <h1>Blue Diamond Almonds Lightly Salted Vegetables</h1>
+                            <span>500 gram</span>
+                            <div class="card-footer">
+                                <h1 class="price">$2.51</h1>
+                                <span>Sold: 90/120</span>
+                            </div>
+                            <div class="card-button">
+                                <button class="btn">Add to Cart</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="../assets/images/products/3.png" alt="">
+                        </div>
+                        <div class="card-content">
+                            <span>Hodo Foods</span>
+                            <h1>Blue Diamond Almonds Lightly Salted Vegetables</h1>
+                            <span>500 gram</span>
+                            <div class="card-footer">
+                                <h1 class="price">$2.51</h1>
+                                <span>Sold: 90/120</span>
+                            </div>
+                            <div class="card-button">
+                                <button class="btn">Add to Cart</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 
