--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,10 @@ section{
     border-radius: 30px;
     cursor: pointer;
 }
+
+.btn-orange{
+    background-color: #FDC040 !important;
+}
 input::placeholder {
     color: #B6B6B6;
 }
@@ -402,4 +406,72 @@ header nav .right span{
     padding: 11px;
     border-radius: 5px;
     font-size: 16px;
+}
+
+
+.footer footer .container{
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr 1fr 2fr;
+    gap: 80px;
+
+}
+
+footer .container .item{
+    display: flex;
+    flex-direction: column;
+}
+footer .container .item h1{
+   font-size: 24px;
+   color: #253D4E;
+   line-height: 32px;
+   padding-bottom: 26px;
+}
+
+footer .container .item a{
+   font-size: 16px;
+   color: #253D4E;
+   line-height: 24px;
+   cursor: pointer;
+}
+footer .container .item span{
+   font-size: 16px;
+   color: #253D4E;
+   line-height: 24px;
+}
+
+footer .container .item .logo{
+    margin-bottom: 23px;
+}
+
+footer .container .item .logo img{
+    height: 80px;
+}
+
+footer .container .item .store-img{
+    display: flex;
+    flex-direction: row;
+    gap: 25px;
+    padding: 20px 0px;
+}
+
+footer .container .item .card-img{
+    padding-top: 20px;
+}
+
+footer .footer-bottom{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 50px 20px;
+    background-color: #F9F9F9;
+    border-radius: 10px;
+}
+
+footer .divider{
+    margin-top: 50px;
+}
+
+footer .footer-bottom strong{
+    color: #3BB77E;
+    
 }
