--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -337,7 +337,7 @@
                                 <span>Sold: 90/120</span>
                             </div>
                             <div class="card-button">
-                                <button class="btn">Add to Cart</button>
+                                <button class="btn btn-orange">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -379,7 +379,85 @@
                 </div>
             </div>
         </section>
+
+        <section class="footer">
+            <footer>
+                <div class="container">
+                    <div class="item">
+                        <div class="logo">
+                            <img src="../assets/images/logo.png"  alt="">
+                        </div>
+                        <span>Pellentesque posuere orci lobortis</span>
+                        <span><strong>Address:</strong> 5171 W Campbell Ave undefined Kent, Utah 53127 United States</span>
+                        <span><strong>Call Us:</strong> (+91) - 540-025-124553</span>
+                        <span><strong>Email:</strong>fax@company.com</span>
+                        <span><strong>Hours:</strong> 10:00 - 18:00, Mon - Sat</span>
+                    </div>
+                    <div class="item">
+                        <h1>Company</h1>
+                        <a>About Us</a>
+                        <a>Delivery Information</a>
+                        <a>Privacy Policy</a>
+                        <a>Terms & Conditions</a>
+                        <a>Contact Us</a>
+                        <a>Support Center</a>
+                        <a>Careers</a>
+                    </div>
+                    
+                    <div class="item">
+                        <h1>Account</h1>
+                        <a>About Us</a>
+                        <a>Delivery Information</a>
+                        <a>Privacy Policy</a>
+                        <a>Terms & Conditions</a>
+                        <a>Contact Us</a>
+                        <a>Support Center</a>
+                        <a>Careers</a>
+                    </div>
+                    <div class="item">
+                        <h1>Account</h1>
+                        <a>About Us</a>
+                        <a>Delivery Information</a>
+                        <a>Privacy Policy</a>
+                        <a>Terms & Conditions</a>
+                        <a>Contact Us</a>
+                        <a>Support Center</a>
+                        <a>Careers</a>
+                    </div>
+
+                    <div class="item">
+                        <h1>Information</h1>
+                        <a>About Us</a>
+                        <a>Delivery Information</a>
+                        <a>Privacy Policy</a>
+                        <a>Terms & Conditions</a>
+                        <a>Contact Us</a>
+                        <a>Support Center</a>
+                        <a>Careers</a>
+                    </div>
+                    
+                    <div class="item app-payment">
+                        <h1>App & Payment</h1>
+                        <span>Install NetMart App from App Store or Google Play</span>
+                        <div class="store-img">
+                            <img src="../assets/images/playstore.png" alt="">
+                            <img src="../assets/images/applestore.png" alt="">
+                        </div>
+                        <span>Secured Payment Gateways</span>
+                        <div class="card-img">
+                            <img src="../assets/images/card.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="divider"></div>
+                <div class="footer-bottom">
+                    <span>© 2025, <strong>Neural Mart & Grocery</strong>- HTML Ecommerce Template</span>
+                    <span>Designed by <strong>Neural Ionic Soft</strong>. All rights reserved</span>
+                </div>
+            </footer>
+        </section>
     </div>
+
 </body>
 
 </html>
