--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -380,15 +380,26 @@
             </div>
         </section>
 
+        <section class="bottom-banner">
+            <div class="content">
+                <h1>Stay home & get your daily needs from our shop</h1>
+                <p>Start You'r Daily Sopping with Nest Mart</p>
+            </div>
+            <div class="bottom-banner-bg">
+                <img src="../assets/images/bottom-banner.png" alt="">
+            </div>
+        </section>
+
         <section class="footer">
             <footer>
                 <div class="container">
                     <div class="item">
                         <div class="logo">
-                            <img src="../assets/images/logo.png"  alt="">
+                            <img src="../assets/images/logo.png" alt="">
                         </div>
                         <span>Pellentesque posuere orci lobortis</span>
-                        <span><strong>Address:</strong> 5171 W Campbell Ave undefined Kent, Utah 53127 United States</span>
+                        <span><strong>Address:</strong> 5171 W Campbell Ave undefined Kent, Utah 53127 United
+                            States</span>
                         <span><strong>Call Us:</strong> (+91) - 540-025-124553</span>
                         <span><strong>Email:</strong>fax@company.com</span>
                         <span><strong>Hours:</strong> 10:00 - 18:00, Mon - Sat</span>
@@ -403,7 +414,7 @@
                         <a>Support Center</a>
                         <a>Careers</a>
                     </div>
-                    
+
                     <div class="item">
                         <h1>Account</h1>
                         <a>About Us</a>
@@ -435,7 +446,7 @@
                         <a>Support Center</a>
                         <a>Careers</a>
                     </div>
-                    
+
                     <div class="item app-payment">
                         <h1>App & Payment</h1>
                         <span>Install NetMart App from App Store or Google Play</span>
